--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Rodapé Superior -->
         <footer class="footer">
             <div class="footer-left">
-                <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+                <img src="logo.jpeg" alt="Logo" width="133" height="82">
             </div>
             <div class="footer-center">
                 <h1>English Master</h1>
@@ -31,7 +31,7 @@
             <h2>PRESENT CONTINUOUS</h2>
             <div class="content-section">
                 <div class="left-image">
-                    <img src="imagem1.jpg" alt="Imagem 1" width="300">
+                    <img src="home 1.jpeg" alt="Imagem 1" width="300">
                 </div>
                 <div class="right-text">
                     <p>O present continuous é um tempo verbal utilizado na língua inglesa quando desejamos expressar uma ideia do que está ocorrendo no momento de fala.</p>
@@ -40,7 +40,7 @@
 
             <div class="content-section">
                 <div class="left-image">
-                    <img src="imagem2.jpg" alt="Imagem 2" width="300">
+                    <img src="home 2.jpeg" alt="Imagem 2" width="300">
                 </div>
                 <div class="right-text">
                     <p>Ele é formado pelos verbos auxiliares To Be (am, is, are) e no principal a forma -ing. Muitas pessoas podem ter dificuldade nesse conteúdo, por isso nosso site te ajuda a encontrar maneiras de aprender de forma mais fácil.</p>
@@ -51,7 +51,7 @@
         <!-- Rodapé Inferior -->
         <footer class="footer">
             <div class="footer-left">
-                <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+                <img src="logo.jpeg" alt="Logo" width="133" height="82">
             </div>
         </footer>
     </section>
@@ -64,7 +64,7 @@
     <!-- Rodapé Superior -->
     <footer class="footer">
         <div class="footer-left">
-            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+            <img src="logo.jpeg" alt="Logo" width="133" height="82">
         </div>
         <div class="footer-center">
             <h1>English Master</h1>
@@ -81,7 +81,7 @@
 
     <div class="content-section">
         <div class="left-image">
-            <img src="imagem3.jpg" alt="Imagem 1" width="300">
+            <img src="speak.jpeg" alt="Imagem 1" width="300">
         </div>
         <div class="right-text">
             <p>Ter diálogos é uma ótima forma de praticar seu speaking.</p>
@@ -90,7 +90,7 @@
 
     <div class="content-section">
         <div class="left-image">
-            <img src="imagem4.jpg" alt="Imagem 2" width="300">
+            <img src="listening.jpeg" alt="Imagem 2" width="300">
         </div>
         <div class="right-text">
             <p>Assistir filmes legendados e ouvir músicas em inglês pode te ajudar no listening.</p>
@@ -99,7 +99,7 @@
 
     <div class="content-section">
         <div class="left-image">
-            <img src="imagem5.jpg" alt="Imagem 3" width="300">
+            <img src="reading.jpeg" alt="Imagem 3" width="300">
         </div>
         <div class="right-text">
             <p>Ler livros e artigos em inglês pode ser útil para o seu reading.</p>
@@ -109,7 +109,7 @@
     <!-- Rodapé Inferior -->
     <footer class="footer">
         <div class="footer-left">
-            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+            <img src="logo.jpeg" alt="Logo" width="133" height="82">
         </div>
     </footer>
 </section>
@@ -147,7 +147,7 @@
     <!-- Rodapé Inferior -->
     <footer class="footer">
         <div class="footer-left">
-            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+            <img src="logo.jpeg" alt="Logo" width="133" height="82">
         </div>
     </footer>
 </section>
