--- a/index.html
+++ b/index.html
@@ -58,4 +58,97 @@
 
 </body>
 </html>
+<!-- Página ASSUNTO -->
+<section class="assunto" style="background-color: #EB86A6;">
+
+    <!-- Rodapé Superior -->
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+        </div>
+        <div class="footer-center">
+            <h1>English Master</h1>
+        </div>
+        <div class="footer-right">
+            <a href="#home" class="nav-link">HOME</a>
+            <a href="#assunto" class="nav-link">ASSUNTO</a>
+            <a href="#info" class="nav-link">INFO</a>
+        </div>
+    </footer>
+
+    <!-- Título Formas de Resolver -->
+    <h2 class="assunto-title">Formas de Resolver</h2>
+
+    <div class="content-section">
+        <div class="left-image">
+            <img src="imagem3.jpg" alt="Imagem 1" width="300">
+        </div>
+        <div class="right-text">
+            <p>Ter diálogos é uma ótima forma de praticar seu speaking.</p>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="left-image">
+            <img src="imagem4.jpg" alt="Imagem 2" width="300">
+        </div>
+        <div class="right-text">
+            <p>Assistir filmes legendados e ouvir músicas em inglês pode te ajudar no listening.</p>
+        </div>
+    </div>
+
+    <div class="content-section">
+        <div class="left-image">
+            <img src="imagem5.jpg" alt="Imagem 3" width="300">
+        </div>
+        <div class="right-text">
+            <p>Ler livros e artigos em inglês pode ser útil para o seu reading.</p>
+        </div>
+    </div>
+
+    <!-- Rodapé Inferior -->
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+        </div>
+    </footer>
+</section>
+<!-- Página INFO -->
+<section class="info" style="background-color: #EB86A6;">
+
+    <!-- Rodapé Superior -->
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+        </div>
+        <div class="footer-center">
+            <h1>English Master</h1>
+        </div>
+        <div class="footer-right">
+            <a href="#home" class="nav-link">HOME</a>
+            <a href="#assunto" class="nav-link">ASSUNTO</a>
+            <a href="#info" class="nav-link">INFO</a>
+        </div>
+    </footer>
+
+    <!-- Caixa de texto -->
+    <section class="contact-info">
+        <div class="contact-box" style="background-color: #FF9DDB;">
+            <p>Nosso email para contato</p>
+        </div>
+        <div class="contact-box" style="background-color: #FF9DDB;">
+            <p>Englishmaster.com.br</p>
+        </div>
+        <div class="contact-box" style="background-color: #FF9DDB;">
+            <p>Número para contato: 03032889</p>
+        </div>
+    </section>
+
+    <!-- Rodapé Inferior -->
+    <footer class="footer">
+        <div class="footer-left">
+            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+        </div>
+    </footer>
+</section>
     
