--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Rodapé Superior -->
     <footer class="footer">
         <div class="footer-left">
-            <img src="imagem_logo.png" alt="Logo" width="133" height="82">
+            <img src="" alt="Logo" width="133" height="82">
         </div>
         <div class="footer-center">
             <h1>English Master</h1>
